# OpenSkies

./: .gitignore  OpenSkies.cabal  README  README.md
resources/: OpenSkies.glade
src/: Agent.hs  Core.hs  Main.hs  Radians.hs  Render.hs  Targeting.hs  Util.hs  Weapon.hs  World.hs
