name:           OpenSkies
version:        0.1.2
cabal-version:  >=1.2
build-type:     Simple
author:         lykos
data-files:     
                resources/Space-Background.jpg, 
                resources/Space-Stars-Background.jpg
		resources/OpenSkies.glade
		

executable OpenSkies
  hs-source-dirs:  src
  build-depends:   
                  base >= 4,
                  gtk3,
                  containers,
                  random,
                  cairo,
                  glib

  ghc-options:     -O2 -threaded -Wall -fno-warn-unused-do-bind
  other-modules:   
                   Agent,
                   Paths_OpenSkies,
                   Radians,
                   Targeting,
                   Weapon,
                   World
  main-is:         Main.hs

